Bug 738577 - Unwrap MPassArg in encodeSlots(). r=dvander